# reproc

./: CMakeLists.txt  build-vs-2015-debug.bat  build-vs-2015-release.bat
.github/workflows/: codeql-analysis.yml
cmake/: reproc.cmake
reproc/: CMakeLists.txt
reproc++/include/reproc++/: drain.hpp  reproc.hpp
reproc++/src/: reproc.cpp
reproc/examples/: common.h  drain.c  env.c  parent.c  path.c  poll.c  read.c  run.c
reproc/include/msvc-fix/: stdbool.h
reproc/include/reproc/: config.h  drain.h  error.h  export.h  reproc.h  run.h  util.h
reproc/src/: clock.h  clock.windows.c  common.c  drain.c  error.windows.c  handle.windows.c  pipe.windows.c  pipe.windows.poll.h  process.h  process.posix.c  process.windows.c  redirect.windows.c  reproc.c  utf.h  utf.windows.c  util.c  util.posix.c  util.windows.c
reproc/src/posix/: reproc.c
reproc/src/windows/: error.c  pipe.c  pipe.h  process.c  process.h  reproc.c
reproc/test/: CMakeLists.txt  argv.c  argv.cpp  deadline.c  env.c  environment.cpp  io.c  io.cpp  overflow.c  path.c  pid.c  stop.c  stop.cpp  util.c  working-directory.c  working-directory.cpp
